[package]
name = "xl_diff"
version = "0.1.0"
edition = "2021"

[lib]
name = "xl_diff"
# "cdylib" instructs the compiler to produce a shared native binary object (.so/.dll/.dylib) 
# that the Python runtime engine can import directly.
crate-type = ["cdylib"]

[dependencies]
calamine = "0.24"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "abi3-py310"]